--- a/Mi_primer_programa.html
+++ b/Mi_primer_programa.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Mi_primer_programa</title>
+        <meta charset="UTF-8">
+<title>Mi primer programa</title>
     </head>
     <body>
         <h1>Hola Mundo :)</h1>
